[bench] cross-library bench project wiring; dynamic chain rows on both kernel boards